--- a/blog_gen.html
+++ b/blog_gen.html
@@ -75,13 +75,13 @@
               Blog template credits &copy; <a href="https://github.com/earlbread/simple-blog-template" >earlbread</a>
 
                 <span style="display: inline; float: right; padding-right: 2em; color: #418FDD"><b>
-                  <a class="mylinks" href="index.html"><img src="images/logo_homepage.png" width=24px></a>
-                  <a class="mylinks" href="https://linkedin.com/in/tanmaychhatbar" target="_blank"><img src="images/logo_linkedin.png" width=24px></a>
-                  <a class="mylinks" href="https://github.com/TanmayChhatbar" target="_blank"><img src="images/logo_github.png" width=24px></a>
-                  <a class="mylinks" href="https://grabcad.com/tanmay.chhatbar-1" target="_blank"><img src="images/logo_grabcad.png" width=24px></a>
-                  <a class="mylinks" href="https://www.youtube.com/c/TanmayChhatbar/" target="_blank"><img src="images/logo_yt.png" width=24px></a>
-                  <a class="mylinks" href="https://www.printables.com/@tanmaychhatbar" target="_blank"><img src="images/logo_printables.jpg" width=24px></a>
-                  <a class="mylinks" href="https://www.instagram.com/tanmaychhatbar/" target="_blank"><img src="images/logo_insta.png" width=24px></a>
+                  <a class="mylinks" href="index.html"><img src="media/logo_homepage.png" width=24px></a>
+                  <a class="mylinks" href="https://linkedin.com/in/tanmaychhatbar" target="_blank"><img src="media/logo_linkedin.png" width=24px></a>
+                  <a class="mylinks" href="https://github.com/TanmayChhatbar" target="_blank"><img src="media/logo_github.png" width=24px></a>
+                  <a class="mylinks" href="https://grabcad.com/tanmay.chhatbar-1" target="_blank"><img src="media/logo_grabcad.png" width=24px></a>
+                  <a class="mylinks" href="https://www.youtube.com/c/TanmayChhatbar/" target="_blank"><img src="media/logo_yt.png" width=24px></a>
+                  <a class="mylinks" href="https://www.printables.com/@tanmaychhatbar" target="_blank"><img src="media/logo_printables.jpg" width=24px></a>
+                  <a class="mylinks" href="https://www.instagram.com/tanmaychhatbar/" target="_blank"><img src="media/logo_insta.png" width=24px></a>
                   <a href="/index.html">Tanmay Chhatbar</a></b>
                 </span>
             
