--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <div style="margin-left: 10%">
         <div class="col-md-12 text">
-            <div class="img mb-6 pt-5"><img class="rounded-circle" src="images/photo.jpeg" alt=""
+            <div class="img mb-6 pt-5"><img class="rounded-circle" src="media/photo.jpeg" alt=""
                     style="height:30vh;width:height;"></div>
             <div class="desc pt-3" margin-left="100px">
                 <h3 class="subheading">Hello! I'm</h3>
@@ -332,13 +332,13 @@
         </div>
     </div>
     <ul id="infoMenu">
-        <li><a class="mylinks" href="index.html"><img src="images/logo_homepage.png" width=24px></a></li>
-        <li><a class="mylinks" href="https://linkedin.com/in/tanmaychhatbar" target="_blank"><img src="images/logo_linkedin.png" width=24px></a></li>
-        <li><a class="mylinks" href="https://github.com/TanmayChhatbar" target="_blank"><img src="images/logo_github_light.png" width=24px></a></li>
-        <li><a class="mylinks" href="https://grabcad.com/tanmay.chhatbar-1" target="_blank"><img src="images/logo_grabcad.png" width=24px></a></li>
-        <li><a class="mylinks" href="https://www.youtube.com/c/TanmayChhatbar/" target="_blank"><img src="images/logo_yt_light.png" width=24px></a></li>
-        <li><a class="mylinks" href="https://www.printables.com/@tanmaychhatbar" target="_blank"><img src="images/logo_printables.jpg" width=24px></a></li>
-        <li><a class="mylinks" href="https://www.instagram.com/tanmaychhatbar/" target="_blank"><img src="images/logo_insta.png" width=24px></a></li>
+        <li><a class="mylinks" href="index.html"><img src="media/logo_homepage.png" width=24px></a></li>
+        <li><a class="mylinks" href="https://linkedin.com/in/tanmaychhatbar" target="_blank"><img src="media/logo_linkedin.png" width=24px></a></li>
+        <li><a class="mylinks" href="https://github.com/TanmayChhatbar" target="_blank"><img src="media/logo_github_light.png" width=24px></a></li>
+        <li><a class="mylinks" href="https://grabcad.com/tanmay.chhatbar-1" target="_blank"><img src="media/logo_grabcad.png" width=24px></a></li>
+        <li><a class="mylinks" href="https://www.youtube.com/c/TanmayChhatbar/" target="_blank"><img src="media/logo_yt_light.png" width=24px></a></li>
+        <li><a class="mylinks" href="https://www.printables.com/@tanmaychhatbar" target="_blank"><img src="media/logo_printables.jpg" width=24px></a></li>
+        <li><a class="mylinks" href="https://www.instagram.com/tanmaychhatbar/" target="_blank"><img src="media/logo_insta.png" width=24px></a></li>
         <p style="text-align: right; padding-right: 2em; color: #418FDD"><b>Tanmay Chhatbar</b></p>
     </ul>
 
