Change to doctoral student

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <br>
 
                 <p class="mb-7">
-                    Studying Master's in Automotive Engineering,<br> Engaged in research at Clemson University (CU-ICAR)
+                    Doctoral Student at Clemson University (CU-ICAR)
                 </p>
                 <br>
                 <hr color="white" width="50%" align="left"/>
