--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
         }
     </style>
 </head>
-
-    <div style="margin-left: 10%">
+<!-- choose between one of the two next lines for background image -->
+<div style="margin-left: 5%; margin-top: 2%; background-image: url('media/index_bg.png'); background-size: 50%; background-repeat: no-repeat; background-position: right top;">
+    <!-- <div style="margin-left: 5%;"> -->
         <div class="col-md-12 text">
             <div class="img mb-6 pt-5"><img class="rounded-circle" src="media/photo.jpeg" alt=""
                     style="height:30vh;width:height;"></div>
@@ -336,7 +337,7 @@
         <li><a class="mylinks" href="https://linkedin.com/in/tanmaychhatbar" target="_blank"><img src="media/logo_linkedin.png" width=24px></a></li>
         <li><a class="mylinks" href="https://github.com/TanmayChhatbar" target="_blank"><img src="media/logo_github_light.png" width=24px></a></li>
         <li><a class="mylinks" href="https://grabcad.com/tanmay.chhatbar-1" target="_blank"><img src="media/logo_grabcad.png" width=24px></a></li>
-        <li><a class="mylinks" href="https://www.youtube.com/c/TanmayChhatbar/" target="_blank"><img src="media/logo_yt_light.png" width=24px></a></li>
+        <li><a class="mylinks" href="https://www.youtube.com/c/TanmayChhatbar/" target="_blank"><img src="media/logo_yt_tp.png" width=24px></a></li>
         <li><a class="mylinks" href="https://www.printables.com/@tanmaychhatbar" target="_blank"><img src="media/logo_printables.jpg" width=24px></a></li>
         <li><a class="mylinks" href="https://www.instagram.com/tanmaychhatbar/" target="_blank"><img src="media/logo_insta.png" width=24px></a></li>
         <p style="text-align: right; padding-right: 2em; color: #418FDD"><b>Tanmay Chhatbar</b></p>
