--- a/projects_gen.html
+++ b/projects_gen.html
@@ -303,7 +303,7 @@
                 </p>
                 </br>
                 <p>
-                    <iframe src="comingsoon.html"></iframe>
+                    <iframe src="https://www.youtube.com/embed/HRwWg1wcDF0?si=mLBbzmQVIc-hi_OC"></iframe>
                 </p>
             </div>
         </div>
