prev changes to main website

--- a/index.html
+++ b/index.html
@@ -273,7 +273,9 @@
                     <iframe src="https://www.youtube.com/embed/iW4tt_eioQQ"></iframe>
                 </p>
             </div>
-            <div class="slide s43">
+        </div>
+        <div class="section">
+            <div class="slide s51">
                 <h1>Project render - Car</h1>
                 <h3>In learning Blender modelling software</h3>
                 <p class="info">
@@ -284,7 +286,7 @@
                     <iframe src="https://www.youtube.com/embed/FBkQdyRUgO4"></iframe>
                 </p>
             </div>
-            <div class="slide s44">
+            <div class="slide s52">
                 <h1>Project render - Motorcycle</h1>
                 <h3>Improving skills in blender</h3>
                 <p class="info">
@@ -295,7 +297,7 @@
                     <iframe src="https://www.youtube.com/embed/YfYLm5pLQ34?si=wQeznKJEq7l3ROvF"></iframe>
                 </p>
             </div>
-            <div class="slide s45">
+            <div class="slide s53">
                 <h1>3D Printer simulation</h1>
                 <h3>Using 3D Modelling and animation to visualize errors in g-code with blender</h3>
                 <p class="info">
@@ -308,8 +310,8 @@
             </div>
         </div>
         <div class="section">
-            <div class="slide s51">
-                <h1>Improvements in the factory</h1>
+            <div class="slide s61">
+                <h1>Industry robotics</h1>
                 <h3>Stagnation isn't good for mind or business</h3>
                 <p class="info">
                     During my undergraduate studies, I designed and manufactured multiple automation solutions and miscellaneous devices for streamlining workflow in processing of potato starch, soaps and detergents. for use in a factory.<br>These include:
@@ -326,8 +328,8 @@
                     <iframe src="https://www.youtube.com/embed/MwPSW_m9hzk"></iframe>
                 </p>
             </div>
-            <div class="slide s52">
-                <h1>Improvements at home</h1>
+            <div class="slide s62">
+                <h1>Home Automation</h1>
                 <h3>Stagnation isn't good at home either</h3>
                 <p class="info">
                     Who likes to stand up and walk over to the switch board to turn the lights on?<br>Who enjoys trying to find the AC remote when it's really hot and you're desperate to be lazy?
@@ -340,7 +342,7 @@
             </div>
         </div>
         <div class="section">
-            <div class="slide s61">
+            <div class="slide s71">
                 <h1>What is fun, motivates you</h1>
                 <h3>What is love, baby</h3>
                 <p class="info">
@@ -370,8 +372,8 @@
         new fullpage('#fullPage', {
             autoScrolling: true,
             navigation: true,
-            anchors: ['about_me','auto_model','auto_robo','aero','other','imp','fun'],
-            navigationTooltips: ['About me','Automotive data & analysis','Automotive robotics','Aeromodelling','Other projects','Improvements','Activity'],
+            anchors: ['about_me','auto_model','auto_robo','aero','electronics','3dmodel','automation','activity'],
+            navigationTooltips: ['About me','Automotive data & analysis','Automotive robotics','Aeromodelling','Electronics','3D Modelling and Animation','Automation','Activity'],
             showActiveTooltip: true,
             slidesNavigation: true,
             controlArrows: false,
