add karting video

--- a/index.html
+++ b/index.html
@@ -350,6 +350,7 @@
                 </p>
                 </br>
                 <p>
+                    <iframe src="https://www.youtube.com/embed/WI3La0e9X_I?si=0w_R1Xm7GftYk6Tj"></iframe>
                     <iframe src="https://www.youtube.com/embed/L_vGYdL0Qy8"></iframe>
                     <iframe src="https://www.youtube.com/embed/rsrUuE2ELrc"></iframe>
                 </p>
