add website generator base

--- a/index.html
+++ b/index.html
@@ -329,6 +329,28 @@
                 </p>
             </div>
             <div class="slide s62">
+                <h1>Website generation</h1>
+                <h3>Automate all repetitive tasks</h3>
+                <p class="info">
+                    Each page on this website was generated using simple text as input. <br>The goal is to allow straightforward expansion with new projects!<br>
+				
+<br>You can find more information and source code on the GitHub page. 
+				The following inputs are required:
+					<ol class="feat">
+						<li>Title</li>
+						<li>Short detail</li>
+						<li>Information</li>
+						<li>Links</li>
+						<li>Background CSS</li>
+					</ol>
+
+                </p>
+                </br>
+                <p>
+                    <iframe src="comingsoon.html"></iframe>
+                </p>
+            </div>
+            <div class="slide s63">
                 <h1>Home Automation</h1>
                 <h3>Stagnation isn't good at home either</h3>
                 <p class="info">
