--- a/index.html
+++ b/index.html
@@ -121,6 +121,23 @@
                 </p>
             </div>
             <div class="slide s12">
+                <h1>Configurable Multi-body dynamics</h1>
+                <h3>CU-ICAR</h3>
+                <p class="info">
+                    A fully configurable MBD model of a car was created in Simscape Multibody. <br>
+					The model includes the following.<br><br>
+					<ol class="feat">
+						<li> Pacejka tyre model.</li>
+						<li> Double-wishbone suspension on all corners. </li>
+						<li> Configurable propulsion </li>
+                    </ol>
+                </p>
+                </br>
+                <p>
+                    <iframe src="https://www.youtube.com/embed/FkfBmEzlezY?si=UlAneS0lNl2SsCih"></iframe>
+                </p>
+            </div>
+            <div class="slide s13">
                 <h1>Tractor-trailer modelling</h1>
                 <h3>CU-ICAR</h3>
                 <p class="info">
@@ -138,7 +155,7 @@
                     <iframe src="https://www.youtube.com/embed/hhK23FUT47k"></iframe>
                 </p>
             </div>
-            <div class="slide s13">
+            <div class="slide s14">
                 <h1>Vehicle datalogger</h1>
                 <h3>Data collection during AutoX events</h3>
                 <p class="info">
