minor change to MBD page

--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                     A fully configurable MBD model of a car was created in Simscape Multibody. <br>
 					The model includes the following.<br><br>
 					<ol class="feat">
+						<li> Fully configurable double-wishbone suspension on all corners. </li>
 						<li> Pacejka tyre model.</li>
-						<li> Double-wishbone suspension on all corners. </li>
 						<li> Configurable propulsion </li>
                     </ol>
                 </p>
