add drift car planar modeling with ROS and CPP

--- a/index.html
+++ b/index.html
@@ -102,6 +102,25 @@
         </div>
         <div class="section">
             <div class="slide s11">
+                <h1>Vehicle Dynamics and Control</h1>
+                <h3>Autonomous Drift Control</h3>
+                <p class="info">
+                    An intermediate milestone to the goal of autonomous drift control in the real world, this highlights the nonlinear modeling of a 4-wheeled car in C++, interfacing with ROS2 for visualization, and eventually control.<br>
+					<ul class="feat">
+						<li>Type of drivetrain (FWD, RWD, AWD)</li>
+						<li>Type of differential (open, limited-slip, locked)</li>
+						<li>Torque, power limits</li>
+						<li>Pacejka curves for tyres (combined slip)</li>
+						<li>Car parameters</li>
+						<li>Optional visualization and joystick control using ROS2</li>
+					</ul>
+                </p>
+                </br>
+                <p>
+                    <iframe src="https://www.youtube.com/embed/29gUpRrnJ5A?si=zav9KWwZAjjTpLzN"></iframe>
+                </p>
+            </div>
+            <div class="slide s12">
                 <h1>Multi-wheeled vehicle modelling</h1>
                 <h3>Deep Orange 13-14 - Clemson University</h3>
                 <p class="info">
@@ -120,7 +139,7 @@
                     <iframe src="https://www.youtube.com/embed/obmg_0Rq8ow"></iframe>
                 </p>
             </div>
-            <div class="slide s12">
+            <div class="slide s13">
                 <h1>Configurable Multi-body dynamics</h1>
                 <h3>CU-ICAR</h3>
                 <p class="info">
@@ -137,7 +156,7 @@
                     <iframe src="https://www.youtube.com/embed/FkfBmEzlezY?si=UlAneS0lNl2SsCih"></iframe>
                 </p>
             </div>
-            <div class="slide s13">
+            <div class="slide s14">
                 <h1>Tractor-trailer modelling</h1>
                 <h3>CU-ICAR</h3>
                 <p class="info">
@@ -155,7 +174,7 @@
                     <iframe src="https://www.youtube.com/embed/hhK23FUT47k"></iframe>
                 </p>
             </div>
-            <div class="slide s14">
+            <div class="slide s15">
                 <h1>Vehicle datalogger</h1>
                 <h3>Data collection during AutoX events</h3>
                 <p class="info">
