media to mp4 (code changes)

--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
         </div>
         <div class="section">
             <div class="slide s11">
+                <video class="bg-video" data-autoplay muted loop playsinline>
+                    <source src="media/IS300_drifting.mp4" type="video/mp4" />
+                </video>
                 <h1>Vehicle Dynamics and Control</h1>
                 <h3>Autonomous Drift Control</h3>
                 <p class="info">
@@ -121,6 +124,9 @@
                 </p>
             </div>
             <div class="slide s12">
+                <video class="bg-video" data-autoplay muted loop playsinline>
+                    <source src="media/do14.mp4" type="video/mp4" />
+                </video>
                 <h1>Multi-wheeled vehicle modelling</h1>
                 <h3>Deep Orange 13-14 - Clemson University</h3>
                 <p class="info">
@@ -140,6 +146,9 @@
                 </p>
             </div>
             <div class="slide s13">
+                <video class="bg-video" data-autoplay muted loop playsinline>
+                    <source src="media/is300 toon - mbd.mp4" type="video/mp4" />
+                </video>
                 <h1>Configurable Multi-body dynamics</h1>
                 <h3>CU-ICAR</h3>
                 <p class="info">
@@ -157,6 +166,9 @@
                 </p>
             </div>
             <div class="slide s14">
+                <video class="bg-video" data-autoplay muted loop playsinline>
+                    <source src="media/tractor_trailer.mp4" type="video/mp4" />
+                </video>
                 <h1>Tractor-trailer modelling</h1>
                 <h3>CU-ICAR</h3>
                 <p class="info">
@@ -175,6 +187,9 @@
                 </p>
             </div>
             <div class="slide s15">
+                <video class="bg-video" data-autoplay muted loop playsinline>
+                    <source src="media/datalogger2.2_fr.mp4" type="video/mp4" />
+                </video>
                 <h1>Vehicle datalogger</h1>
                 <h3>Data collection during AutoX events</h3>
                 <p class="info">
@@ -188,6 +203,9 @@
         </div>
         <div class="section">
             <div class="slide s21">
+                <video class="bg-video" data-autoplay muted loop playsinline>
+                    <source src="media/tb3_rev.mp4" type="video/mp4" />
+                </video>
                 <h1>Autonomous robot</h1>
                 <h3>Clemson University - International Center of Automotive Research</h3>
                 <p class="info">
@@ -203,6 +221,9 @@
                 </p>
             </div>
             <div class="slide s22">
+                <video class="bg-video" data-autoplay muted loop playsinline>
+                    <source src="media/adas.mp4" type="video/mp4" />
+                </video>
                 <h1>Small scale ADAS</h1>
                 <h3>Clemson University - International Center of Automotive Research</h3>
                 <p class="info">
@@ -214,6 +235,9 @@
                 </p>
             </div>
             <div class="slide s23">
+                <video class="bg-video" data-autoplay muted loop playsinline>
+                    <source src="media/r6_rev.mp4" type="video/mp4" />
+                </video>
                 <h1>Motorcycle gear shifting automation</h1>
                 <h3>Capstone Project - Bachelor's in Mechanical Engineering</h3>
                 <p class="info">
@@ -227,6 +251,9 @@
         </div>
         <div class="section">
             <div class="slide s31">
+                <video class="bg-video" data-autoplay muted loop playsinline>
+                    <source src="media/boeing_p3.mp4" type="video/mp4" />
+                </video>
                 <h1>Boeing Aeromodelling 2019-20 - IIT Kharagpur</h1>
                 <h3>Finishing 3<sup>rd</sup> place overall</h3>
                 <p class="info">
@@ -240,6 +267,9 @@
                 </p>
             </div>
             <div class="slide s32">
+                <video class="bg-video" data-autoplay muted loop playsinline>
+                    <source src="media/sae.mp4" type="video/mp4" />
+                </video>
                 <h1>SAE Aero Design East 2019</h1>
                 <h3>7th* in Mission Performance</h3>
                 <p class="info">
@@ -252,6 +282,9 @@
                 </p>
             </div>
             <div class="slide s33">
+                <video class="bg-video" data-autoplay muted loop playsinline>
+                    <source src="media/speedy_g.mp4" type="video/mp4" />
+                </video>
                 <h1>Speedy G</h1>
                 <h3>"I am Speed!", said the Little Bird</h3>
                 <p class="info">
@@ -263,6 +296,9 @@
                 </p>
             </div>
             <div class="slide s34">
+                <video class="bg-video" data-autoplay muted loop playsinline>
+                    <source src="media/foomie.mp4" type="video/mp4" />
+                </video>
                 <h1>The adventures of foomie</h1>
                 <h3>The tiniest little RC plane I made</h3>
                 <p class="info">
@@ -275,6 +311,9 @@
                 </p>
             </div>
             <div class="slide s35">
+                <video class="bg-video" data-autoplay muted loop playsinline>
+                    <source src="media/ft.mp4" type="video/mp4" />
+                </video>
                 <h1>Aerobatics</h1>
                 <h3>What fun is flying straight</h3>
                 <p class="info">
@@ -288,6 +327,9 @@
         </div>
         <div class="section">
             <div class="slide s41">
+                <video class="bg-video" data-autoplay muted loop playsinline>
+                    <source src="media/plotter.mp4" type="video/mp4" />
+                </video>
                 <h1>i1Pro 3 automated plotter</h1>
                 <h3>Designed, manufactured and programmed by self</h3>
                 <p class="info">
@@ -299,6 +341,9 @@
                 </p>
             </div>
             <div class="slide s42">
+                <video class="bg-video" data-autoplay muted loop playsinline>
+                    <source src="media/smartwatch.mp4" type="video/mp4" />
+                </video>
                 <h1>DIY Smartwatch</h1>
                 <h3>Designed, manufactured and programmed by self</h3>
                 <p class="info">
@@ -312,6 +357,9 @@
         </div>
         <div class="section">
             <div class="slide s51">
+                <video class="bg-video" data-autoplay muted loop playsinline>
+                    <source src="media/2jz_colored.mp4" type="video/mp4" />
+                </video>
                 <h1>Project render - Car</h1>
                 <h3>In learning Blender modelling software</h3>
                 <p class="info">
@@ -323,6 +371,9 @@
                 </p>
             </div>
             <div class="slide s52">
+                <video class="bg-video" data-autoplay muted loop playsinline>
+                    <source src="media/r6_rev.mp4" type="video/mp4" />
+                </video>
                 <h1>Project render - Motorcycle</h1>
                 <h3>Improving skills in blender</h3>
                 <p class="info">
@@ -334,6 +385,9 @@
                 </p>
             </div>
             <div class="slide s53">
+                <video class="bg-video" data-autoplay muted loop playsinline>
+                    <source src="media/3d_printer.mp4" type="video/mp4" />
+                </video>
                 <h1>3D Printer simulation</h1>
                 <h3>Using 3D Modelling and animation to visualize errors in g-code with blender</h3>
                 <p class="info">
@@ -347,6 +401,9 @@
         </div>
         <div class="section">
             <div class="slide s61">
+                <video class="bg-video" data-autoplay muted loop playsinline>
+                    <source src="media/loading.mp4" type="video/mp4" />
+                </video>
                 <h1>Industry robotics</h1>
                 <h3>Stagnation isn't good for mind or business</h3>
                 <p class="info">
@@ -365,6 +422,9 @@
                 </p>
             </div>
             <div class="slide s62">
+                <video class="bg-video" data-autoplay muted loop playsinline>
+                    <source src="media/coding.mp4" type="video/mp4" />
+                </video>
                 <h1>Website generation</h1>
                 <h3>Automate all repetitive tasks</h3>
                 <p class="info">
@@ -387,6 +447,9 @@
                 </p>
             </div>
             <div class="slide s63">
+                <video class="bg-video" data-autoplay muted loop playsinline>
+                    <source src="media/loading.mp4" type="video/mp4" />
+                </video>
                 <h1>Home Automation</h1>
                 <h3>Stagnation isn't good at home either</h3>
                 <p class="info">
@@ -401,6 +464,9 @@
         </div>
         <div class="section">
             <div class="slide s71">
+                <video class="bg-video" data-autoplay muted loop playsinline>
+                    <source src="media/2jz_colored_s_better.mp4" type="video/mp4" />
+                </video>
                 <h1>What is fun, motivates you</h1>
                 <h3>What is love, baby</h3>
                 <p class="info">
@@ -436,8 +502,9 @@
             showActiveTooltip: true,
             slidesNavigation: true,
             controlArrows: false,
-            scrollingSpeed: 500,
+            scrollingSpeed: 250,
             dragAndMove: true,
+            lazyLoading: true,
         })
     </script>
     <br />
